# Gestion-Commerce

./: .gitignore  DevMontCommerce.spec  build.py  main.py  main.spec  pyproject.toml  requirements.txt  seed_example_data.py  test_import.xlsx
alembic/: env.py
alembic/versions/: c23d69e0609a_initial_schema.py
app/: database.py
app/core/: app_settings.py  config.py  constants.py  exceptions.py  logging.py  security.py
app/models/: __init__.py  base.py  customer.py  invoice.py  product.py  purchase.py  sale.py  stock.py  supplier.py  user.py
app/repository/: __init__.py  base_repository.py  customer_repository.py  invoice_repository.py  product_repository.py  purchase_repository.py  sale_repository.py  stock_repository.py  supplier_repository.py  user_repository.py
app/services/: __init__.py  auth_service.py  backup_scheduler.py  backup_service.py  import_service.py  invoice_service.py  product_service.py  purchase_service.py  sale_service.py  stock_service.py
app/ui/: app.py  session.py  theme.py
app/ui/components/: __init__.py  app_shell.py  data_table.py  modal.py  navbar.py  search_bar.py  stock_badge.py
app/ui/views/: __init__.py  customers_view.py  dashboard_view.py  import_view.py  login_view.py  pos_view.py  products_view.py  purchases_view.py  (+5 more)
data/: settings.json
reports/: __init__.py  invoice.py  pdf_service.py  stock_report.py  ticket.py
tests/: conftest.py
tests/unit/: test_auth_service.py  test_invoice_service.py  test_pos_view.py  test_product_service.py  test_purchase_service.py  test_sale_service.py  test_stock_service.py
