[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devmont-commerce"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.0",
    "Pillow>=10.0.0",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "reportlab>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
